--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,11 +1,11 @@
 ru:
   direction: "Направление"
-  caller_id_name: "ID имени абонента"
-  caller_id_number: "ID номера абонента"
+  caller_id_name: "ID имени"
+  caller_id_number: "ID номера"
   destination_number: "Номер назначения"
   start_stamp: "Время начала"
   end_stamp: "Время конца"
-  duration: "Продолжительность"
+  duration: "Длит."
   read_codec: "Кодек"
   read_rate: "Скорость"
   hangup_cause: "Причина зависания"
